crates/solidity-v2/testing/snapshots/diagnostics_output/resolution/incompatible_built_in_version/event_selector/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 9582] Error: Member "selector" not found or not visible after argument-dependent lookup in function ().
   ╭─[input.sol:8:16]
   │
 8 │         return MyEvent.selector;
   │                ────────┬───────  
   │                        ╰───────── Error occurred here.
───╯
